7.4/ru/1-tools.rst
Проверка рабочего окружения
====================================================

Прежде чем приступить к разработке проекта, нужно проверить, что у вас корректно настроено рабочее окружение. Это очень важно. Имеющиеся на сегодня инструменты разработки сильно отличаются от тех, которые были 10 лет назад. Они существенно изменились в лучшую сторону. Было бы глупо не использовать их: хорошие инструменты помогут добиться больших успехов.

Пожалуйста, не пропускайте этот шаг. Или, по крайней мере, прочитайте последний раздел про Symfony CLI.

Компьютер
------------------

Вам понадобится компьютер. К счастью, он может быть на любой популярной операционной системе: macOS, Windows или Linux. Symfony и все инструменты, которые мы будем использовать, совместимы с любой из них.

Используемые технологии
---------------------------------------------

Будем разрабатывать быстро, используя лучшие инструменты на сегодняшний момент. Для этого я выбрал наиболее подходящие, на мой взгляд, технологии.

Мы будем использовать `PostgreSQL`_ для всего: от базы данных до очередей, от кеша до хранилища сессий. Для большинства проектов PostgreSQL – отличное решение, которое хорошо масштабируется и позволяет упростить инфраструктуру всего лишь с помощью одного сервиса.

В конце книги мы узнаем, как использовать `RabbitMQ`_ для обработки очередей и `Redis`_ для хранения сессий.

IDE
---

.. index:: IDE

Если хотите, вы можете использовать Notepad. Хотя я бы не рекомендовал этого делать.

Раньше я работал в Textmate. Теперь же я пользуюсь "настоящей" IDE. Благодаря таким функциям IDE, как автодополнение, автоматическое добавление и сортировка операторов ``use``, быстрое переключение с одного файла на другой, ваша производительность увеличится в разы.

Я бы рекомендовал использовать `Visual Studio Code`_ или `PhpStorm`_. Первая программа бесплатна, вторая — нет, но лучше работает с Symfony (благодаря плагину `Symfony Support`_). Решение за вами. Я знаю, что вы хотели бы узнать, какую из этих IDE я использую. Эту книгу я пишу в Visual Studio Code.

Терминал
----------------

.. index:: Terminal

Мы будем постоянно переключаться между IDE и командной строкой. Вы можете использовать встроенный терминал в IDE, хотя лично мне больше нравится использовать внешний терминал из-за того, что можно изменить размер окна.

В Linux есть встроенный терминал — программа ``Terminal``. В macOS рекомендую вместо штатного терминала использовать `iTerm2`_, а в Windows хорошо зарекомендовал себя `Hyper`_.

Git
---

.. index:: Git

В качестве системы управления версиями мы будем использовать `Git`_, так как, как правило, все его сейчас используют.

В Windows установите `Git Bash`_.

Убедитесь, что вы знаете, как выполнять основные команды, такие как ``git clone``, ``git log``, ``git show``, ``git diff``, ``git checkout`` и т. п.

PHP
---

.. index::
    single: PHP
    single: PHP extensions

Мы будем использовать Docker для разнообразных сервисов приложения, хотя для простоты, производительности и стабильности на моём компьютере установлен PHP. Можете считать меня консерватором, но сочетание локально установленного PHP и сервисов Docker — это идеальный для меня вариант.

Use PHP 8.3 and check that the following PHP extensions are installed or
install them now: ``intl``, ``pdo_pgsql``, ``xsl``, ``amqp``, ``gd``,
``openssl``, ``sodium``, and ``iconv``. Optionally install ``redis``, ``curl``,
and ``zip`` as well.

С помощью команды ``php -m`` можно посмотреть включённые в данный момент модули.

Нам также понадобится ``php-fpm``, если ваша платформа его поддерживает, хотя ``php-cgi`` тоже подойдёт.

Composer
--------

.. index:: Composer

Управление зависимостями в проекте на Symfony очень важно. Установите последнюю версию инструмента для управления зависимостями в PHP — `Composer`_.

Если вы не работали с Composer, то рекомендую изучить его команды.

.. tip::

    Можно использовать сокращённые имена команд: ``composer req`` вместо ``composer require``, ``composer rem`` вместо ``composer remove`` и т. д.

NodeJS
------

Мы не будем писать много JavaScript-кода, но всё же воспользуемся инструментами JavaScript/NodeJS для управления нашими ресурсами. Проверьте, что у вас установлен `NodeJS`_.

Docker и Docker Compose
------------------------

.. index:: Docker,Docker Compose

Docker и Docker Compose будут управлять сервисами приложения. `Установите их`_ и запустите Docker. Если вы впервые пользуетесь Docker, ознакомьтесь с этим инструментом. Не переживайте: сценарии использования Docker будут достаточно простыми, без сложных конфигураций и настроек.

Symfony CLI
-----------

.. index:: Symfony CLI

И последнее, но не менее важное: для ускорения разработки мы будем использовать инструмент командной строки ``symfony``. Начиная с того, что он предоставляет функции локального веб-сервера, и заканчивая его полной интеграцией с Docker и поддержки облачного сервиса Platform.sh, этот инструмент сэкономит нам немало времени.

Установите теперь `Symfony CLI`_.

Для использования HTTPS на локальном сервере нужно ещё добавить поддержку TLS, `установив центр сертификации (certificate authority, CA)`_ с помощью следующей команды:

.. index::
    single: Symfony CLI;server:ca:install

.. code-block:: terminal
    :class: ignore

    $ symfony server:ca:install

Убедитесь, что на вашем компьютере всё готово для работы, выполнив следующую команду:

.. code-block:: terminal
    :class: ignore

    $ symfony book:check-requirements

Если вы хотите немного поэкспериментировать, запустите `прокси-сервер Symfony`_. Хотя это необязательно, наш проект будет доступен по локальному доменному имени, оканчивающемуся на ``.wip``.

При выполнении команды в терминале мы почти всегда будем использовать префикс ``symfony``. Например, ``symfony composer``, а не просто ``composer``, либо ``symfony console`` вместо ``./bin/console``.

Основная причина — Symfony CLI автоматически создаёт некоторые переменные окружения, исходя из сервисов, запущенных на вашем компьютере с помощью Docker. Эти переменные окружения доступны для HTTP-запросов, поскольку локальный веб-сервер добавляет их автоматически. Таким образом, использование префикса ``symfony`` в CLI даст одинаковый результат на разных платформах.

Кроме того, Symfony CLI автоматически выбирает "самую подходящую" версию PHP из доступных на вашей локальной машине.

.. _`PostgreSQL`: https://www.postgresql.org/
.. _`RabbitMQ`: https://www.rabbitmq.com/
.. _`Redis`: https://redis.io/
.. _`Visual Studio Code`: https://code.visualstudio.com/
.. _`PhpStorm`: https://www.jetbrains.com/phpstorm/
.. _`Composer`: https://getcomposer.org/
.. _`NodeJS`: https://nodejs.org/
.. _`Установите их`: https://docs.docker.com/install/
.. _`Symfony CLI`: https://symfony.com/download
.. _`установив центр сертификации (certificate authority, CA)`: https://symfony.com/doc/current/setup/symfony_server.html#enabling-tls
.. _`Symfony Support`: https://plugins.jetbrains.com/plugin/7219-symfony-support
.. _`iTerm2`: https://iterm2.com/
.. _`Hyper`: https://hyper.is/
.. _`Git`: https://git-scm.com/
.. _`Git Bash`: https://gitforwindows.org/
.. _`прокси-сервер Symfony`: https://symfony.com/doc/current/setup/symfony_server.html#setting-up-the-local-proxy
